packages/svelte/tests/compiler-errors/samples/css-global-block-declaration/main.svelte
<style>
	/* ok */
	.x :global {
		color: red;
	}

	:global .y {
		color: red;
	}

	/* not ok */
	:global {
		color: red;
	}
</style>
